feat: add Bytes

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -1,32 +1,28 @@
 [linters]
 disable = [
-	"depguard",
-	"ireturn",
-	"wastedassign",
-	"unused",
-	"stylecheck",
-	"tparallel",
-	"unparam",
-	"rowserrcheck",
-	"noctx",
-	"sqlclosecheck",
-	"staticcheck",
-	"structcheck",
-	"gosimple",
-	"nilerr",
-	"golint",
-	"interfacer",
-	"bodyclose",
-	"contextcheck",
-	"maligned",
-	"scopelint",
-	"nolintlint",
-	"wrapcheck",
-	"exhaustivestruct",
-	"varcheck",
-	"ifshort",
-	"nosnakecase",
-	"deadcode",
-	"exhaustruct",
+  # 暂时忽略
+  "gomoddirectives",
+	"exportloopref",
+	"gomnd",
+  "gosmopolitan",
+  "depguard",
+  "ireturn",
+  "wastedassign",
+  "unused",
+  "stylecheck",
+  "tparallel",
+  "unparam",
+  "rowserrcheck",
+  "noctx",
+  "sqlclosecheck",
+  "staticcheck",
+  "gosimple",
+  "nilerr",
+  "bodyclose",
+  "contextcheck",
+  "nolintlint",
+  "wrapcheck",
+  "exhaustruct",
+	"execinquery",
 ]
 enable-all = true
